--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <form action="/" method="post">
     <label for="cityInput">City Name: </label>
     <input id="cityInput" type="text" name="cityName">
-    <button type="submit">Go</button>
+    <button type="submit">Check</button>
    </form>
 </body>
 </html>
